--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
 test {
     filter {
-        includeTestsMatching "org.wahlzeit.*"
+       includeTestsMatching "AllTests"
     }
     testLogging {
             events "passed", "skipped", "failed"
